--- a/views/components/sections/section--footer-signup.twig
+++ b/views/components/sections/section--footer-signup.twig
@@ -1,4 +1,4 @@
-<section class="section--footer-signup bg--red spacing--vert-1 spacing--horiz-1 spacing--dsk-vert-2 spacing--dsk-vert-3 flex flex--wrap justify--between spacing--dsk-horiz-2 align--items-center">
+<section class="section--footer-signup bg--red spacing--gutter-mob spacing--vert-2 spacing--dsk-vert-3 flex flex--wrap justify--between spacing--dsk-horiz-2 align--items-center">
 	<div class="grid--one  grid--md-two-fifths">
 		<i class="icon-taste-your-way grid--half grid--sm-two-fifths grid--md-three-fifths block" data-grunticon-embed></i>
 	</div>
