--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,4 +1,4 @@
-<footer class="spacing--gutter">
+<footer class="spacing--gutter-dsk">
 	{% include 'components/sections/section--footer-signup.twig' %}
 	{% include 'components/sections/section--footer-links.twig' %}
 </footer>
