--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -33,13 +33,13 @@ $h5: 0.875 * $base-font-size;
 $h6: 0.7 * $base-font-size;
 
 h1 {
-    font-size: $h1;
+    font-size: 1.75em;
     line-height: 1.1;
     margin-bottom: 0.2em;
 }
 
 h2 {
-    font-size: $h2;
+    font-size: 1.5em;
     letter-spacing: 0;
     line-height: 1.1;
 
