--- a/scss/_02-components/_block--overlap-page-titles.scss
+++ b/scss/_02-components/_block--overlap-page-titles.scss
@@ -1,10 +1,18 @@
 .block--overlap-page-titles {
-    position: relative;
-    top: -3em;
-    left: 1em;
-    margin-bottom: -3em;
+    @include media($screen-sm) {
+        position: relative;
+        top: -3em;
+        left: 1em;
+        margin-bottom: -3em;
 
-    h1 {
-        margin: 0;
+        h1 {
+            margin: 0;
+        }
+    }
+
+
+    @include media($max-sm) {
+        padding-top: 2em;
+        padding-bottom: .5em;
     }
 }
