--- a/views/base.twig
+++ b/views/base.twig
@@ -10,7 +10,7 @@
 		{% include 'components/header.twig' %}
 	{% endblock %}
 
-<main role="main" class="content-wrapper  spacing--vert-1">
+<main role="main" class="content-wrapper  spacing--dsk-vert-1">
 
 		{% block content %}
 			Sorry, no content
