--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -88,3 +88,8 @@
         transition: background-position 0.2s $base-cubic;
     }
 }
+
+.icon-angle-down {
+    background-position: 95% center;
+    background-size: 20px;
+}
