--- a/scss/_06-utils/_color-palette.scss
+++ b/scss/_06-utils/_color-palette.scss
@@ -22,7 +22,7 @@ $red:(
 	main:			#ee5643,
 
 );
-
+$gray: #969596;
 $black: map-get($blue, dark);
 // -----------------------------------------------------------------------------
 // Social Icons
