--- a/views/components/blocks/block--winery.twig
+++ b/views/components/blocks/block--winery.twig
@@ -6,6 +6,6 @@
 			<img width="300" class="hidden--mob" align="right" src="{{winery.image|resize(600,600)}}" />
 		{% endif %}
 		{{winery.winery.content.description}}
-		<a href="{{post.permalink}}">Read More</a>
+		<a href="{{winery.link}}">Read More</a>
 	</div>
 </div>
