--- a/scss/_02-components/_margin.scss
+++ b/scss/_02-components/_margin.scss
@@ -42,6 +42,11 @@
 .margin--bot-4{margin-bottom: 4em * $grid;}
 
 
+.margin--top-1{margin-top: 1em * $grid;}
+.margin--top-2{margin-top: 2em * $grid;}
+.margin--top-3{margin-top: 3em * $grid;}
+.margin--top-4{margin-top: 4em * $grid;}
+
 
 .mar--no{
     margin: 0 !important;
