--- a/views/components/sections/section--winery-filter.twig
+++ b/views/components/sections/section--winery-filter.twig
@@ -13,13 +13,13 @@
 	</form>
 	<div class="block--day-filter font--large flex flex--wrap justify--between spacing--vert-1">
 		<strong>Days open:</strong>
-		<a class="color--black" href="">Monday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Tuesday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Wednesday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Thursday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Friday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Saturday</a><span class="hidden--mob spacing--horiz-half">|</span>
-		<a class="color--black" href="">Sunday</a>
+		<a class="color--black" href="?date_id=monday">Monday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=tuesday">Tuesday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=wednesday">Wednesday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=thursday">Thursday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=friday">Friday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=saturday">Saturday</a><span class="hidden--mob spacing--horiz-half">|</span>
+		<a class="color--black" href="?date_id=sunday">Sunday</a>
 	</div>
 </section>
 </script>
