--- a/views/page-explore-our-wineries.twig
+++ b/views/page-explore-our-wineries.twig
@@ -3,9 +3,10 @@
 {% block content %}
 	{% include 'components/blocks/block--breadcrumbs.twig' %}
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-		<section class="section--page-header spacing--vert-2">
+		<section class="section--page-header spacing--vert-2 spacing--gutter text--center">
 			<h1 class="article-h1 text--center">{{post.post_title}}</h1>
-			{% if currentFilter != null %}Currently filtering by all wineries with {{currentFilter.name}}. <a href="{{site.url}}/explore-our-wineries/">View All Wineries</a>{% endif %}
+			{% if currentFilter != null %}<h3 class="spacing--vert-1">Currently filtering by all wineries with {{currentFilter.name}}. <a href="{{site.url}}/explore-our-wineries/">View All Wineries</a></h3>{% endif %}
+				{% if dateFilter != null %}<h3 class="spacing--vert-1">Currently filtering by all wineries open <span class="text--capitalize">{{dateFilter}}</span>. <a href="{{site.url}}/explore-our-wineries/">View All Wineries</a></h3>{% endif %}
 		</section>
 		{% include 'components/sections/section--winery-map.twig' %}
 		{% include 'components/sections/section--winery-list.twig' %}
