--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -42,6 +42,8 @@ h2 {
     font-size: 1.5em;
     letter-spacing: 0;
     line-height: 1.1;
+        margin-bottom: 0.5em;
+    margin-top: 1em;
 
     &.large {
         @include media($screen-xs) {}
