--- a/views/page.twig
+++ b/views/page.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 {% block content %}
 <section class="section--single-header spacing--gutter-dsk margin--center max-wrap">
-	<img class="grid--one" data-original="{{post.thumbnail|resize(1320, 500)}}" alt="" class="header--img hidden--mob" data-original-set="{{post.thumbnail|resize(640, 242)}} 640w,{{post.thumbnail|resize(750, 284)}} 750w,{{post.thumbnail|resize(701, 266)}} 768w,{{post.thumbnail|resize(767,291)}} 834w,{{post.thumbnail|resize(1914, 726)}} 1024w,{{post.thumbnail|resize(2026, 768)}} 1080w">
+	<img class="grid--one" data-original="{{post.thumbnail|resize(1320, 500)}}" alt="" class="header--img hidden--mob" data-original-set="{{post.thumbnail|resize(640, 242)}} 640w,{{post.thumbnail|resize(750, 284)}} 750w,{{post.thumbnail|resize(701, 266)}} 768w,{{post.thumbnail|resize(767,291)}} 834w,{{post.thumbnail|resize(1914, 726)}} 1024w,{{post.thumbnail|resize(2026, 768)}} 1080w" alt="Image for {{ post.title }}">
 <div class="block--overlap-page-titles bg--brown-light grid--gutter grid--sm-three-fifths grid--md-two-fifths spacing--dsk-vert-2 spacing--dsk-horiz-2 spacing--gutter-mob"><h1 class="article-h1">{{post.title}}</h1></div>
 </section>
 
