--- a/views/page.twig
+++ b/views/page.twig
@@ -6,7 +6,7 @@
 </section>
 
 <article class="post-type-{{post.post_type}} flex flex--wrap justify--between align--items-start spacing--dsk-vert-1 max-wrap margin--center" id="post-{{post.ID}}">
-<section class="section--content grid--one grid--md-three-fifths spacing--gutter">
+<section class="section--content grid--one grid--md-three-fifths spacing--gutter margin--bot-2 margin--mob-bot-1">
 	 {% include 'components/blocks/block--breadcrumbs.twig' %}<br>
 	<div class="font--large">{{post.content}}</div>
 </section>
