Parent Page Margins

--- a/views/components/sections/section--child-blocks.twig
+++ b/views/components/sections/section--child-blocks.twig
@@ -1,4 +1,4 @@
-<section class="section--child-blocks spacing--gutter max-wrap margin--center">
+<section class="section--child-blocks spacing--gutter max-wrap margin--center margin--bot-3 margin--mob-bot-1">
 	{% if eventdisplay != true %}
 	{% if post.children %}
 		{% for child in post.children %}
