--- a/views/components/header.twig
+++ b/views/components/header.twig
@@ -1,7 +1,7 @@
-<header class="header main--header max-wrap margin--center dsk--flex flex--wrap align--items-baseline spacing--gutter-mob {% if post.slug == 'home' %}hidden--dsk{% endif %}">
-	<a class="hdr-logo-link" href="/" title="{{site.name}} Logo" rel="home"><i class="icon-logo-tab" data-grunticon-embed></i></a>
+<header class="header main--header max-wrap margin--center dsk--flex flex--wrap align--items-baseline justify--between spacing--gutter {% if post.slug == 'home' %}hidden--dsk{% endif %}">
+	<a class="hdr-logo-link grid--sm-sixth" href="/" title="{{site.name}} Logo" rel="home"><i class="icon-logo-tab" data-grunticon-embed></i></a>
 	<label class="menu--trigger hidden--dsk"><span></span></label>
 	{% include 'components/navigation.twig' %}
-	<div class="grid--sm-third hidden--mob">{% include 'components/blocks/block--header-social.twig' %}</div>
+	<div class="grid--sm-tenth grid--lg-fifth grid--xl-third hidden--mob">{% include 'components/blocks/block--header-social.twig' %}</div>
 	{% include 'components/blocks/block--search-modal.twig' %}
 </header>
