--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -26,7 +26,7 @@
             margin-top: -3.2em;
             margin-bottom: 0.2em;
 
-            @include media($screen-sm) {
+            @include media($screen-lg) {
                 margin-left: 2em;
                 margin-top: -3em;
                 margin-bottom: 0;
