--- a/views/components/blocks/block--header-social.twig
+++ b/views/components/blocks/block--header-social.twig
@@ -1,5 +1,5 @@
 <div class="block--header-social">
-	{% if  options.social.facebook %}<a href="{{options.social.facebook.url}}" title="{{options.social.facebook.title}}" target="{{options.social.facebook.target}}"><i class="icon-social--facebook" data-grunticon-embed></i></a>{% endif %}
-	{% if  options.social.twitter %}<a href="{{options.social.twitter.url}}" title="{{options.social.twitter.title}}" target="{{options.social.twitter.target}}"><i class="icon-social--twitter" data-grunticon-embed></i></a>{% endif %}
+	{% if  options.social.facebook %}<a class="hidden--tab" href="{{options.social.facebook.url}}" title="{{options.social.facebook.title}}" target="{{options.social.facebook.target}}"><i class="icon-social--facebook" data-grunticon-embed></i></a>{% endif %}
+	{% if  options.social.twitter %}<a class="hidden--tab" href="{{options.social.twitter.url}}" title="{{options.social.twitter.title}}" target="{{options.social.twitter.target}}"><i class="icon-social--twitter" data-grunticon-embed></i></a>{% endif %}
 	<a href="" class="toggle-search" id="toggleSearch"><i class="icon-social--search" data-grunticon-embed></i></a>
 </div>
