--- a/views/components/sections/section--winery-aside.twig
+++ b/views/components/sections/section--winery-aside.twig
@@ -1,4 +1,5 @@
 <aside class="section--winery-aside grid--one grid--md-fourth spacing--vert-1">
+	<h1 class="hidden--dsk grid--one">{{post.title}}</h1>
 	{% if winery.sidebar.logo %}<div class="grid--one"><img width="165" class="winery-logo" src="{{winery.sidebar.logo|resize(330)}}"></div>{% endif %}
 	{% if winery.sidebar.dates %}
 		<div class="margin--bot-1 grid--tab-half">
