Updated the varietals page

--- a/scss/_02-components/_section--winery-list.scss
+++ b/scss/_02-components/_section--winery-list.scss
@@ -23,4 +23,9 @@
         border-bottom: 1px solid map-get($brown, dark);
         padding-bottom: 4em;
     }
+
+
+    img {
+        margin-left: 1em;
+    }
 }
