--- a/scss/_02-components/_section--winery-map.scss
+++ b/scss/_02-components/_section--winery-map.scss
@@ -1,7 +1,10 @@
 .section--winery-map {
     height: 80vh;
-    .wineryInfo{
-    	padding:1em;
-    	font-size: 1.7em;
+
+    .wineryInfo {
+        padding: 1em;
+        font-size: 1.7em;
     }
+
+    border-top: 1px solid map-get($brown, faded);
 }
