--- a/views/components/sections/section--footer-links.twig
+++ b/views/components/sections/section--footer-links.twig
@@ -28,5 +28,5 @@
 </section>
 
 <section class="spacing--vert-1 text--center font--bold">
-	<a href="{{options.footer.privacy.url}}" class="color--black" target="{{options.footer.privacy.target}}" title="{{options.footer.privacy.title}}">{{options.footer.privacy.title}}</a><span class="spacing--horiz-half">|</span>&copy; Copyright 2010-{{"now"|date("Y")}} Placer County Vintners Association. All Rights Reserved. Website by <a href="https://honeyagency.com" target="_blank" title="Website designed and developed by Honey Agency in Sacramento, CA">Honey Agency.</a>
+	<a href="{{options.footer.privacy.url}}" class="color--black" target="{{options.footer.privacy.target}}" title="{{options.footer.privacy.title}}">{{options.footer.privacy.title}}</a><span class="spacing--horiz-half">|</span>&copy; Copyright 2010-{{"now"|date("Y")}} Placer County Vitners Association. All Rights Reserved. Website by <a href="https://honeyagency.com" target="_blank" title="Website designed and developed by Honey Agency in Sacramento, CA">Honey Agency.</a>
 </section>
