--- a/views/components/sections/section--footer-links.twig
+++ b/views/components/sections/section--footer-links.twig
@@ -20,7 +20,7 @@
 		</ul>
 	</nav>
 	<div class="block--footer-social grid--one order--0 grid--one grid--lg-fourth flex flex--wrap justify--start align--items-center ">
-		<i class="icon-i80" data-grunticon-embed></i>
+		<a href="{{site.url}}/plan-your-visit/trail-map/"><i class="icon-i80" data-grunticon-embed></i></a>
 		{% if options.social.facebook %}<a href="{{options.social.facebook.url}}" target="{{options.social.facebook.target}}" title="{{options.social.facebook.title}}"><i class="icon-social--facebook footer-social" data-grunticon-embed></i></a>{% endif %}
 		{% if options.social.twitter %}<a href="{{options.social.twitter.url}}" target="{{options.social.twitter.target}}" title="{{options.social.twitter.title}}"><i class="icon-social--twitter footer-social" data-grunticon-embed></i></a>{% endif %}
 			{% if options.social.instagram %}<a href="{{options.social.instagram.url}}" target="{{options.social.instagram.target}}" title="{{options.social.instagram.title}}"><i class="icon-social--instagram footer-social" data-grunticon-embed></i></a>{% endif %}
