--- a/views/components/blocks/block--search-modal.twig
+++ b/views/components/blocks/block--search-modal.twig
@@ -1,4 +1,4 @@
-<div class="block--search-modal bg--white grid--sm-half spacing--vert-2 spacing--horiz-2">
+<div class="block--search-modal bg--white grid--sm-half spacing--vert-2 spacing--horiz-2 hidden--mob">
 	<a href="" title="Click to close this search modal" class="close toggle-search" id="toggleSearch"><i class="icon-close" data-grunticon-embed></i></a>
 	<h5>{{options.search.title}}</h5>
 	<p>{{options.search.text}}</p>
