--- a/views/base.twig
+++ b/views/base.twig
@@ -22,4 +22,5 @@
 	{{ function('wp_footer') }}
 {% endblock %}
 </body>
+<script type="text/javascript" charset="utf-8" async defer>$('#email_address_0').attr('placeholder', 'Email');</script>
 </html>
