--- a/views/404.twig
+++ b/views/404.twig
@@ -1,5 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+	<section class="spacing--vert-1 spacing--dsk-vert-4 text--center">
+	{{options.default.404}}
+</section>
 {% endblock %}
